# smelly-desktop

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
